<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="!PongWars"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/sp_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_player_label" />

    <Button
        android:id="@+id/mp_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/multi_player_label" />
	<!--     <Button
        android:id="@+id/settings_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_label" />	-->
 
    <Button
        android:id="@+id/help_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_label" />

    <Button
        android:id="@+id/quit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit_label" />

</LinearLayout>